添加新的功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,34 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity
+            android:name=".activity.MainActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.TransitionsActivity"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity
+            android:name=".activity.ShareActivity"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity
+            android:name=".activity.ExplodeActivity"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity
+            android:name=".activity.FadeActivity"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity
+            android:name=".activity.SlideActivity"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".activity.WidgetActivity"
+            android:configChanges="orientation|keyboardHidden"/>
     </application>
 
 </manifest>
