--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 23 //推荐使用最新
     buildToolsVersion "23.0.2"
 
     defaultConfig {
